# hip-learn

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  shared_memory_kernel.hip
.run/: smoke ▸ debug (rocgdb).run.xml
.zed/: CHEATSHEET.md  debug.json  settings.json  tasks.json
00-toolchain-smoke/: toolchain_smoke.hip
TileDistribution/: another.hip  main.hip
coordinate_systems/: README.md  main.hip
descriptors_and_transforms/: main.hip
droplet/: 1-install-rocm-7.2.4.sh  2-bootstrap-droplet.sh  README.md
hip_runtime_api/initialisation/: main.hip  main.out
hip_runtime_api/memory_management/: pageable.hip  pinned.hip
matmul/: main.hip
sample/: sample.hip
views/: main.hip
